--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/banner.png" class="d-block w-100" alt="...">
+            <img src="images/banner.png" class="d-block w-100" alt="..." style="height: 620px;">
             <div class="carousel-caption d-none d-md-block">
               <h1 class="fs-1">The perfect venue for your <br> next event</h1>
               <p class="fs-5">Amet minim mollit non deserunt ullamco est sit aliqua <br>
@@ -51,7 +51,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/banner.png" class="d-block w-100" alt="...">
+            <img src="images/people.png" class="d-block w-100" alt="..." style="height: 620px;">
             <div class="carousel-caption d-none d-md-block">
               <h1 class="fs-1">The perfect venue for your <br> next event</h1>
               <p class="fs-5">Amet minim mollit non deserunt ullamco est sit aliqua <br>
@@ -60,7 +60,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/banner.png" class="d-block w-100" alt="...">
+            <img src="images/wedding.png" class="d-block w-100" alt="..." style="height: 620px;">
             <div class="carousel-caption d-none d-md-block">
               <h1 class="fs-1">The perfect venue for your <br> next event</h1>
               <p class="fs-5">Amet minim mollit non deserunt ullamco est sit aliqua <br>
@@ -69,6 +69,7 @@
             </div>
           </div>
         </div>
+      </div>
     </section>
           
 
